# watermark

./: .gitignore  config.yaml  main.py  pyproject.toml
docs/superpowers/plans/: 2026-06-21-watermark-tool.md
docs/superpowers/specs/: 2026-06-21-watermark-tool-design.md
tests/: conftest.py  test_api_base.py  test_api_detect.py  test_api_embed.py  test_api_extract.py  test_c2pa_service.py  test_config.py  test_errors.py  test_models.py  test_opencli_service.py  test_queue_manager.py  test_ring_detector.py  test_security.py  test_spai_service.py  test_watermark_service.py
watermark_app/: __init__.py  config.py  main.py
watermark_app/models/: errors.py  results.py  task.py
watermark_app/queue/: __init__.py  manager.py
watermark_app/routers/: __init__.py  detect.py  embed.py  extract.py
watermark_app/services/: c2pa_service.py  opencli_service.py  ring_detector.py  spai_service.py  watermark_service.py
watermark_app/static/: app.js
watermark_app/templates/: index.html
watermark_tools/: package-lock.json  package.json
